# storage_analyzer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: build.yml  test.yml
storage_analyzer/: analyzer.py  main.py  scanner.py  suggestions.py  utils.py
tests/: test_analyzer.py  test_main.py  test_scanner.py  test_suggestions.py  test_utils.py
