[build-system]
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "storage-analyzer"
version = "0.1.0"
description = "A CLI tool to analyze storage space and suggest cleanup on Linux"
authors = [{name = "Nikola", email = "nikola@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
storage-analyzer = "storage_analyzer.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

license = {text = "GPL-3.0"}
